[package]
name = "rbrinfo"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private = true

[[bin]]
name = "cargo-rbrinfo"

[[bin]]
name = "rbrinfo"

[dependencies]
cargo_metadata = "0.18"
log = "0.4"
petgraph = "0.6"
serde_json = "1.0"
syn = { version = "2.0", features = [ "parsing", "full", "visit", "extra-traits", "visit-mut" ] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.10"
